Introduce various interfaces to help building rules cases